# mod1

./: .gitignore  CMakeLists.txt  Makefile  TODO.md  main.cpp  resources.qrc  valgrind_ignore_leaks.txt
.github/workflows/: static.yml
core/: Map.cpp  Map.hpp
maps/: big_map2.mod1
resources/: big_map.mod1
shaders/: terrain.frag  terrain.vert
shaders/desktop/: terrain.vert
shaders/web/: terrain.frag  terrain.vert
srcs/: main.cpp
srcs/core/: Map.cpp  Map.hpp  Triangle.cpp  Triangle.hpp  Triangulator.cpp  Triangulator.hpp
srcs/gui/: MainWindow.cpp  MainWindow.ui  OpenGLWidget.cpp  OpenGLWidget.hpp  Test.cpp  Test.hpp  mainwindow.cpp  mainwindow.hpp
srcs/utils/: colors.h  errors.h
utils/: errors.h
